# sports_betting_analytics_engine

./: .airflowignore  .gitignore  Dockerfile  LICENSE  README.md  aeb_caps_req.yml  dbt_project.yml  demo.md  pyproject.toml  requirements.txt  setup.md  usage.md
.astro/: config.yaml  setup.md
.circleci/: config.yml  continue_config.yml  secrets_list
.circleci/infrastructure_deployment/: ec2_provisioning.yml  ec2_workflow.yml  subnets_workflow.yml  vpc_provisioning.yml  vpc_workflow.yml
.github/scripts/: kafka_setup.sh
.github/workflows/: ec2_workflow.yml  pytest.yml  ruff_linting.yml  snowflake_workflow.yml  subnet_workflow.yml  type_checking.yml  vpc_workflow.yml
dags/: README.md  batch_games_ingestion.py  cleaning.py  dbt_marts.py  games_source_dqc.py  historical_games_ingestion.py  historical_games_transformation.py  historical_odds_ingestion.py  historical_odds_transformation.py  io_historical_games_ingestion.py  nba_batch_processing.py  odds_batch_processing.py  odds_ingestion_dqc.py  parent_controller.py  raw_json_struct_dqc.py  snowflake_dbt_staging_marts.py  snowflake_raw_to_staging.py  sports_batch_backup.py  sports_batch_processing.py  sports_ingestion_backup.py  sports_ingestion_dqc.py  test_nba_batch_processing.py
dbt/: .gitignore  README.md  dbt-requirements.txt  dbt_project.yml  packages.yml
dbt/macros/: int_bookmakers.sql  int_market_efficiency.sql  int_odds_movement.sql  int_overtime.sql  int_record_matchup.sql  overtime_handling.sql  stg_odds.sql
dbt/tests/: asset_valid_odds_range.sql  periods_match_linescores.sql
setups/: README.md  airflow.md  dbt.md  druid.md  grafana.md  infra_guide.md  kafka.md  snowflake.md
snowflake/: db_schema_setup.sql  external_stages.sql  external_tables.sql  setup.md  snowpipe_setup.sql  storage_integration.sql
src/betflow/: pipeline_utils.py
src/druid_specs/: cfb_games_analytics.json  nba_games_analytics.json  nhl_games_analytics.json
src/pipeline_mains/: games_pipeline.py  odds_pipeline.py  odds_verify.py  weather_pipeline.py
src/testing_real_time/: cfb_verify.py  games_pipeline.py  main_pipeline.py  nba_verify.py  nhl_verify.py  odds_pipeline.py  odds_verify.py  verify_weather.py  weather_pipeline.py
src/tests/: conftests.py
src/trying/: config.py  (+9 more)
terraform/: main.tf
(+222 files in other folders)
