[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "betflow"
dynamic = ["version"]
description = "A simple package for sports betting analytics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sanchit Vijay", email = "sanchitvj1026@gmail.com" }, ]

dependencies = [
    "apache-airflow>=2.10.0",
    "boto3>=1.34.73",
    "botocore>=1.34.73",
    "kafka-python>=2.0.2",
]

[project.urls]
#homepage = "https://github.com/yourusername/my_project"
repository = "https://github.com/sanchitvj/sports_betting_analytics_engine"
#documentation = "https://yourusername.github.io/my_project"

[tool.hatch.version]
path = "src/betflow/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
]

#[tool.ruff]
#exclude = ["src/"]

#[tool.mypy]
#ignore_missing_imports = true
#exclude = ["src/", "src/"]